--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,5 +17,9 @@ workflows:
   version: 2
   build_and_test:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              only:
+                - master  # This ensures the job runs only on the master branch
 
